# genomic-visualization-dashboard

./: README.md  package-lock.json
backend/: README.md  benchmark.py  logic.py  main.py  performance_metrics.csv  pyproject.toml  sequences_fetcher.py
backend/controllers/: ingest_controller.py
backend/test/: main.py  maintest_unlimited.py  sequences.fasta  sth_sequence.fasta  test.md  test_seq.fasta
backend/test_genomes/: NZ_AP031418.1.fasta  NZ_AP031431.1.fasta  NZ_AP035793.1.fasta  NZ_AP035794.1.fasta  NZ_AP035797.1.fasta  NZ_CP090367.1.fasta  NZ_CP098238.1.fasta  NZ_CP098240.1.fasta  NZ_CP110974.1.fasta  NZ_CP113127.1.fasta  NZ_CP113134.1.fasta  NZ_CP113139.1.fasta  NZ_CP113143.1.fasta  NZ_CP113147.1.fasta  NZ_CP113151.1.fasta  NZ_CP113155.1.fasta  NZ_CP113285.1.fasta  NZ_CP129194.1.fasta  NZ_CP129198.1.fasta  NZ_CP129199.1.fasta  NZ_CP137081.1.fasta  NZ_CP146750.1.fasta  NZ_CP155454.1.fasta  NZ_CP160446.1.fasta  NZ_CP170999.1.fasta  NZ_CP172391.1.fasta  NZ_CP172582.1.fasta  NZ_CP173167.1.fasta  NZ_CP174386.1.fasta
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  not-found.tsx  page.tsx  utils.tsx
frontend/components/: NucleotideSimpleStats.tsx  NucleotideVisualizer.tsx  SearchInput.tsx
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: BiodallianaceViewer.js  CircularGenomeView.js  Controls.js  DetailedStatistics.js  FeatureTable.js  GenomeInputSection.js  GenomeVisualizer.js  Header.js  SequenceComposition.js  StatisticsCards.js  VisualizationPanel.js  (+1 more)
frontend/store/: useSearchStore.ts
