[project]
name = "proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
]
